// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render place card's Rating with 5 stars, width = 100%, without value 1`] = `
<div
  className="place-card__rating rating"
>
  <div
    className="place-card__stars rating__stars"
  >
    <span
      style={
        Object {
          "width": "100%",
        }
      }
    />
    <span
      className="visually-hidden"
    >
      Rating
    </span>
  </div>
</div>
`;

exports[`Rating should render review Rating with value, 3 stars, width = 60% 1`] = `
<div
  className="reviews__rating rating"
>
  <div
    className="reviews__stars rating__stars"
  >
    <span
      style={
        Object {
          "width": "60%",
        }
      }
    />
    <span
      className="visually-hidden"
    >
      Rating
    </span>
  </div>
  <span
    className="reviews__rating-value rating__value"
  >
    3
  </span>
</div>
`;
